# flask_dao_template

./: .gitignore  README.md  logging.ini  pyproject.toml
db/: db.sqlite3
docs/: install.txt
docsultant/: dao.py  db.py  model.py  srv.py
docsultant/app/web/templates/: home.j2
