[tool.poetry]
name = "docsultant"
version = "1.0.1"
description = ""
authors = ["Vadim Melnik <vmelnik@docsultant.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.3.2"
dataclasses_json = "0.5.8"
flask-restx = "1.1.0"
sqlalchemy = "2.0.16"
#psycopg2 = "2.9.6"

[tool.poetry.dev-dependencies]
pytest = "7.3.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
# This is where we specify where our app entry point(s) is by assigning
#function within modules to the name of a script to be run.
#The example run = "wsgi:main" is specifying that we want to create a command called "run," which will look in wsgi.py for a function called main(). With this set, we can then launch our app via the Poetry CLI by typing
#poetry run .

# use syntax like listed below from command line:
#        poetry run <name>
# e.g.:
#        poetry run srv

srv = "docsultant.srv:main"
test_model = "docsultant.tests.test_model:test_1"
